tests/snapshots/run_wpt_conformance__coreml_expand_float32_0D_scalar_to_0D.snap
---
source: tests/run_wpt_conformance.rs
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
expand.https.any.js expand float32 0D scalar to 0D, coreml
 Failed to build graph: coreml runtime failed: MLModel compile failed: Failed to parse the model specification. Error: Unable to parse ML Program: in operation of type tile: Required param 'reps' is missing

--- built graph ---
webnn_graph "graph" v2 {
  inputs {
    expandInput: f32[];
  }

  nodes {
    [expandOutput] = expand(expandInput, label="");
  }

  outputs { expandOutput; }
}
